--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/prime"
-    >
+    android:background="@drawable/prime" >
 
-    <Button
-        android:id="@+id/find_button"
-        android:layout_width="88dp"
-        android:layout_height="51dp"
-        android:layout_marginBottom="304dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginLeft="148dp"
-        android:layout_marginRight="148dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="159dp"
-        android:background="@android:drawable/alert_dark_frame"
-        android:gravity="center"
-        android:text="@string/find"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+    <data>
+         </data>
 
-    <EditText
-        android:id="@+id/number_Text"
-        android:layout_width="215dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="85dp"
-        android:layout_marginLeft="84dp"
-        android:layout_marginRight="85dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="81dp"
-        android:ems="10"
-        android:inputType="numberSigned"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/find_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/binarybutton"
-        android:layout_width="158dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="210dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginLeft="314dp"
-        android:layout_marginRight="120dp"
-        android:layout_marginStart="314dp"
-        android:layout_marginTop="46dp"
-        android:gravity="center"
-        android:text="@string/binary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.966"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/find_button"
-        app:layout_constraintVertical_bias="0.0" />
+        <Button
+            android:id="@+id/find_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="332dp"
+            android:background="@android:drawable/alert_dark_frame"
+            android:gravity="center"
+            android:text="@string/find1"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/binarybutton"
+            android:layout_width="158dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="56dp"
+            android:layout_marginEnd="113dp"
+            android:layout_marginLeft="113dp"
+            android:layout_marginRight="113dp"
+            android:layout_marginStart="113dp"
+            android:layout_marginTop="228dp"
+            android:gravity="center"
+            android:text="@string/binary"
+            app:layout_constraintBottom_toTopOf="@+id/find_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/number_Text"
+            android:layout_width="367dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="64dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="11dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="116dp"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="@string/enter_a_number"
+            android:inputType="numberSigned"
+            app:layout_constraintBottom_toTopOf="@+id/binarybutton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="LabelFor" />
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</layout>
